--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sugar-help-activity (19-0tch2) UNRELEASED; urgency=medium
+
+  * Revised dependencies.
+
+ -- Martin Abente Lahaye <tch@sugarlabs.org>  Wed, 22 Apr 2015 14:45:51 -0400
+
 sugar-help-activity (19-0tch1) UNRELEASED; urgency=low
 
   * Initial release for Debian.
