--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sugar-help-activity (19-0tch3) UNRELEASED; urgency=medium
+
+  * Add missing glib dependency.
+  * Fix copyright note.
+
+ -- Martin Abente Lahaye <tch@sugarlabs.org>  Wed, 22 Apr 2015 18:56:22 -0400
+
 sugar-help-activity (19-0tch2) UNRELEASED; urgency=medium
 
   * Revised dependencies.
