--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sugar-help-activity (19-1~0tch1) trusty; urgency=medium
+
+  * Clean-up rules file.
+
+ -- Martin Abente Lahaye <tch@sugarlabs.org>  Tue, 21 Jul 2015 10:24:33 -0400
+
 sugar-help-activity (19-0tch3) UNRELEASED; urgency=medium
 
   * Add missing glib dependency.
